--- a/video.html
+++ b/video.html
@@ -126,6 +126,7 @@
         </section>
 
 
+
         <section class="cols-padding">
             <div class="video-section">
                 <div class="container mx-auto">
@@ -133,48 +134,139 @@
                         <div class="w-full ">
                             <!-- Main Video Image -->
                             <div class="video-first-part">
-                                <div class="w-full">
-                                    <img src="assets/video-image/video-image-1.png" alt="video-image" class="w-full h-auto rounded-lg">
+                              <div class="w-full opacity-100 relative">
+                                <img src="assets/video-image/video-image-0.png" alt="video-image" class="w-full h-auto rounded-lg">
+                                <div class="absolute inset-0 bg-black bg-opacity-50 rounded-lg"></div>
+                                <div class="content absolute top-[20%] left-[35%]  lg:top-[40%] lg:left-[30%]">
+                                    <div class="flex flex-col items-center">
+                                        <div class="relative">
+                                          <div class="btn mb-10  relative z-0">
+                                            <a href="#">
+                                                <img src="assets/video-image/buttone.png" alt="video-image" class="w-11/12 rounded-lg">
+                                            </a>
+                                          </div>
+                                        </div>
+                                      <div class="content text-xl  lg:text-5xl text-white w-full">BodyFX / MiniFx (Fat Removal)</div>
+                                    </div>
                                 </div>
+                             </div>
                                 <!-- Row 1 -->
                                 <div class="w-full flex flex-wrap justify-between mt-3">
                                     <div class="w-full sm:w-[48%] mb-3">
-                                        <div class="img">
-                                            <img src="assets/video-image/video-image-2.png" alt="video-image" class="w-full h-auto rounded-lg">
+                                        <div class="img opacity-100 relative">
+                                          <img src="assets/video-image/video-image-11.png" alt="video-image" class="w-full h-auto rounded-lg">
+                                          <div class="absolute inset-0 bg-black bg-opacity-50 rounded-lg"></div>
+                                          <div class="content absolute top-[20%] left-[30%] md:top-[20%] md:left-[35%]  lg:top-[30%] lg:left-[40%]">
+                                              <div class="flex flex-col items-center">
+                                                  <div class="relative">
+                                                    <div class="btn mb-10  relative z-0 flex justify-center items-center">
+                                                      <a href="#">
+                                                          <img src="assets/video-image/buttone.png" alt="video-image" class="w-6/12 md:w-10/12 rounded-lg">
+                                                      </a>
+                                                    </div>
+                                                  </div>
+                                                <div class="content text-5xl md:text-xl lg:text-3xl xl:text-5xl text-white w-full cormorant ">Promo Video</div>
+                                              </div>
+                                          </div>
                                         </div>
                                     </div>
                                     <div class="w-full sm:w-[48%] mb-3">
-                                        <div class="img">
-                                            <img src="assets/video-image/video-image-3.png" alt="video-image" class="w-full h-auto rounded-lg">
+                                        <div class="img opacity-100 relative">
+                                          <img src="assets/video-image/video-image-12.png" alt="video-image" class="w-full h-auto rounded-lg">
+                                          <div class="absolute inset-0 bg-black bg-opacity-50 rounded-lg"></div>
+                                          <div class="content absolute top-[20%] left-[20%] md:left-[25%]  lg:top-[30%] lg:left-[15%]">
+                                              <div class="flex flex-col items-center">
+                                                  <div class="relative">
+                                                    <div class="btn mb-10  relative z-0 flex justify-center items-center">
+                                                      <a href="#">
+                                                          <img src="assets/video-image/buttone.png" alt="video-image" class="w-6/12 lg:w-10/12 rounded-lg">
+                                                      </a>
+                                                    </div>
+                                                  </div>
+                                                <div class="content text-3xl md:text-xl lg:text-3xl xl:text-5xl text-white w-full cormorant ">Votiva (Vaginal Tightening)</div>
+                                              </div>
+                                          </div>
                                         </div>
                                     </div>
                                 </div>
                                 <!-- Row 2 -->
                                 <div class="w-full flex flex-wrap justify-between mt-3">
-                                    <div class="w-full sm:w-[48%] mb-3">
-                                        <div class="img">
-                                            <img src="assets/video-image/video-image-4.png" alt="video-image" class="w-full h-auto rounded-lg">
+                                  <div class="w-full sm:w-[48%] mb-3">
+                                      <div class="img opacity-100 relative">
+                                        <img src="assets/video-image/video-image-13.png" alt="video-image" class="w-full h-auto rounded-lg">
+                                        <div class="absolute inset-0 bg-black bg-opacity-50 rounded-lg"></div>
+                                        <div class="content absolute top-[20%] left-[30%] md:top-[20%] md:left-[35%]  lg:top-[30%] lg:left-[40%]">
+                                            <div class="flex flex-col items-center">
+                                                <div class="relative">
+                                                  <div class="btn mb-10  relative z-0 flex justify-center items-center">
+                                                    <a href="#">
+                                                        <img src="assets/video-image/buttone.png" alt="video-image" class="w-6/12 md:w-10/12 rounded-lg">
+                                                    </a>
+                                                  </div>
+                                                </div>
+                                              <div class="content text-5xl md:text-xl lg:text-3xl xl:text-5xl text-white w-full cormorant ">Promo Video</div>
+                                            </div>
                                         </div>
-                                    </div>
-                                    <div class="w-full sm:w-[48%] mb-3">
-                                        <div class="img">
-                                            <img src="assets/video-image/video-image-5.png" alt="video-image" class="w-full h-auto rounded-lg">
+                                      </div>
+                                  </div>
+                                  <div class="w-full sm:w-[48%] mb-3">
+                                      <div class="img opacity-100 relative">
+                                        <img src="assets/video-image/video-image-14.png" alt="video-image" class="w-full h-auto rounded-lg">
+                                        <div class="absolute inset-0 bg-black bg-opacity-50 rounded-lg"></div>
+                                        <div class="content absolute top-[20%] left-[20%] md:left-[25%]  lg:top-[30%] lg:left-[15%]">
+                                            <div class="flex flex-col items-center">
+                                                <div class="relative">
+                                                  <div class="btn mb-10  relative z-0 flex justify-center items-center">
+                                                    <a href="#">
+                                                        <img src="assets/video-image/buttone.png" alt="video-image" class="w-6/12 lg:w-10/12 rounded-lg">
+                                                    </a>
+                                                  </div>
+                                                </div>
+                                              <div class="content text-3xl md:text-xl lg:text-3xl xl:text-5xl text-white w-full cormorant ">Votiva (Vaginal Tightening)</div>
+                                            </div>
                                         </div>
-                                    </div>
-                                </div>
+                                      </div>
+                                  </div>
+                              </div>
                                 <!-- Row 3 -->
                                 <div class="w-full flex flex-wrap justify-between mt-3">
-                                    <div class="w-full sm:w-[48%] mb-3">
-                                        <div class="img">
-                                            <img src="assets/video-image/video-image-6.png" alt="video-image" class="w-full h-auto rounded-lg">
+                                  <div class="w-full sm:w-[48%] mb-3">
+                                      <div class="img opacity-100 relative">
+                                        <img src="assets/video-image/video-image-15.png" alt="video-image" class="w-full h-auto rounded-lg">
+                                        <div class="absolute inset-0 bg-black bg-opacity-50 rounded-lg"></div>
+                                        <div class="content absolute top-[20%] left-[30%] md:top-[20%] md:left-[35%]  lg:top-[30%] lg:left-[40%]">
+                                            <div class="flex flex-col items-center">
+                                                <div class="relative">
+                                                  <div class="btn mb-10  relative z-0 flex justify-center items-center">
+                                                    <a href="#">
+                                                        <img src="assets/video-image/buttone.png" alt="video-image" class="w-6/12 md:w-10/12 rounded-lg">
+                                                    </a>
+                                                  </div>
+                                                </div>
+                                              <div class="content text-5xl md:text-xl lg:text-3xl xl:text-5xl text-white w-full cormorant ">Promo Video</div>
+                                            </div>
                                         </div>
-                                    </div>
-                                    <div class="w-full sm:w-[48%] mb-3">
-                                        <div class="img">
-                                            <img src="assets/video-image/video-image-7.png" alt="video-image" class="w-full h-auto rounded-lg">
+                                      </div>
+                                  </div>
+                                  <div class="w-full sm:w-[48%] mb-3">
+                                      <div class="img opacity-100 relative">
+                                        <img src="assets/video-image/video-iimage-16.png" alt="video-image" class="w-full h-auto rounded-lg">
+                                        <div class="absolute inset-0 bg-black bg-opacity-50 rounded-lg"></div>
+                                        <div class="content absolute top-[20%] left-[20%] md:left-[25%]  lg:top-[30%] lg:left-[15%]">
+                                            <div class="flex flex-col items-center">
+                                                <div class="relative">
+                                                  <div class="btn mb-10  relative z-0 flex justify-center items-center">
+                                                    <a href="#">
+                                                        <img src="assets/video-image/buttone.png" alt="video-image" class="w-6/12 lg:w-10/12 rounded-lg">
+                                                    </a>
+                                                  </div>
+                                                </div>
+                                              <div class="content text-3xl md:text-xl lg:text-3xl xl:text-5xl text-white w-full cormorant ">Votiva (Vaginal Tightening)</div>
+                                            </div>
                                         </div>
-                                    </div>
-                                </div>
+                                      </div>
+                                  </div>
+                              </div>
                             </div>
                         </div>
                     </div>
