--- a/video.html
+++ b/video.html
@@ -21,7 +21,7 @@
 
 <body>
   <header class="">
-    <nav class="nav-bar px-4 lg:px-6 py-2.5 ">
+    <nav class="nav-bar md:px-4 lg:px-6 py-2.5 ">
         <div class="w-full md:w-10/12 xl:w-12/12 flex flex-wrap justify-between items-center mx-auto relative z-0">
             <div class="background absolute top-[120%] left-[2%] w-full h-full ">
                 <img src="assets/images/Line1.png" alt="line" class="hidden md:block" class="">
@@ -33,7 +33,7 @@
               <div class="hidden lg:block btn bg-cyan-200  hover:bg-cyan-300 p-1 ">
                 <a href="contactus.html" class="hidden md:block  relative z-20   text-black-900 font-semibold py-1 px-3  raleway ">Contact Us</a>
               </div>
-                <button data-collapse-toggle="mobile-menu-2" type="button" class="inline-flex items-center p-2 ml-1 text-sm text-gray-500 rounded-lg lg:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="mobile-menu-2" aria-expanded="false">
+                <button data-collapse-toggle="mobile-menu-2" type="button" id="buttones" class="inline-flex items-center p-2 ml-1 text-sm text-gray-500 rounded-lg lg:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="mobile-menu-2" aria-expanded="false">
                     <span class="sr-only">Open main menu</span>
                     <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path></svg>
                     <svg class="hidden w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
@@ -453,7 +453,23 @@
       </section>
   </footer>
       
-    <script src="/js/main.js"></script>
+  <script>
+    document.addEventListener("DOMContentLoaded", () => {
+        const menuButton = document.getElementById("buttones");
+        const mobileMenu = document.getElementById("mobile-menu-2");
+        const body = document.body;
+        menuButton.addEventListener("click", () => {
+            const isMenuOpen = menuButton.getAttribute("aria-expanded") === "true";
+            if (isMenuOpen) {
+                // Close menu
+                mobileMenu.classList.remove("myclass");
+            } else {
+                mobileMenu.classList.add("myclass");
+                body.style.overflow = "hidden"; // Disable body scroll
+            } 
+        });
+    });
+  </script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script>
       window.onscroll = function () {
